--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
        <ul class="nav navbar-nav navbar-right">
        <% if user_signed_in? %>
         <li><%= link_to "Profil", user_path(current_user)  %></li>
+        <li><%= link_to "TimeLine", posts_path %></li>
         <li><%= link_to "Edit", edit_user_registration_path  %></li>
         <li><%= button_to "Logout",destroy_user_session_path,method: :delete, id: "logout-button" %></li>
        <% else %>
