--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,26 @@
 <h2>Facebook Posts</h2>
+<hr>
+<h4>Search for Posts:</h4>
+<%= form_tag filtering_path,:method=>"post" do %>
+ <ul>
+   <li>Select the dates : <%= date_field_tag 'date_1'  %>   <%= date_field_tag 'date_2' %></li><br>
+   <li>Select user name: 
+   <select name="user_name">
+   <% @users.each do |user| %>
+     <option value="<%= user.id %>"><%= user.name%></option>
+   <% end %>
+   </select>
+   </li><br>
+   <li>Likes<span style="color:red">(you can enter one or if you enter both it means inbetween): </span>  
+   <%= label_tag 'more then:' %>
+   <%= text_field_tag 'x' %> 
+
+   <%= label_tag 'less then:' %>
+   <%= text_field_tag 'y' %>
+   </li><br>
+   <%= submit_tag("Search",:name => nil,class:"btn btn-primary") %>
+  </ul>
+<% end %>
 
 <ol class="posts">
 
